--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -25,16 +25,6 @@
                   padding-bottom: footer height;
 
             }
-
-            {#body {#}
-            {#    overflow-x: hidden;#}
-            {#    min-height: 100vh;#}
-            {#    display: flex;#}
-            {#    flex-direction: column;#}
-            {##}
-                {#display: flex;#}
-                {#flex-direction: column;#}
-            {#}#}
 </style>
 <body>
     <main>
@@ -56,7 +46,6 @@
                 overflow-x: hidden;
                 padding-top: 4rem;
                 transition: 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-            {#font-family: "Bebas Neue";#}
             }
 
             .sidenav a {
@@ -204,37 +193,17 @@
 
             <style>
                 .my_footer {
-                    {#position: relative;#}
-
-                    {#position: fixed;#}
-                    {#bottom: 1px;#}
                     width: 100%;
-                    {#justify-content: center;#}
-                    {#display: flex;#}
-                    {#background-color: #ffffff;#}
-
-                      position: absolute;
-                      bottom: 0;
-
-
-                    {#position: absolute;#}
+                    position: absolute;
+                    bottom: 0;
                     left: 0;
-                    {#bottom: 0;#}
-                    {#width: 100%;#}
-                    {#height: 80px;#}
-
-                {#margin-top: auto;#}
-                    {#margin-bottom: 0;#}
-
-
-                    {#height: 10px;#}
-                    {##}
-                    {#margin-top: auto;#}
+                    font-family: 'Roboto', sans-serif;
+                    border-top: 1px solid #9d9b9b;
                 }
             </style>
 {#        <div class="wrapper_base">#}
             <div class="container px-4 py-5" id="main-contents">
-                <footer class="my_footer pt-3 mt-4 text-muted" style="font-family: 'Roboto', sans-serif; border-top: 1px solid #9d9b9b;">
+                <footer class="my_footer pt-3 mt-4 text-muted">
                     &nbsp;© IDG RAS
                     <br>
                     &nbsp;Institute of geosphere dynamics of Russian academy of sciences
