--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -130,14 +130,14 @@
 {#                <div class="three-inline-buttons">#}
 {#                <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">#}
 {#                        <div class="col d-flex" style="justify-content: center; align-items: center">#}
-                            <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: right" value="Previous day" onclick="previous()">
+                            <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: right; font-family: 'Roboto', sans-serif;" value="Previous day" onclick="previous()">
                 </td>
                 <td class="child" style="text-align: center;">
-                    <input class="btn_up" type="submit" formaction="/date-selection" style="text-align:center;" value="Calendar">
+                    <input class="btn_up" type="submit" formaction="/date-selection" style="text-align:center; font-family: 'Roboto', sans-serif;" value="Calendar">
                 </td>
 {#                    </form>#}
                 <td class="child">
-                    <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: left" value="Next day" onclick="next()">
+                    <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: left; font-family: 'Roboto', sans-serif;" value="Next day" onclick="next()">
                 </td>
             </table>
                                 <input type="hidden" id="source" name="source" value="{{ source }}">
