--- a/templates/data.html
+++ b/templates/data.html
@@ -6,6 +6,14 @@
 
 {% load static %}
 
+{#  <head>#}
+{#    <!-- Material Design Lite -->#}
+{#    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>#}
+{#    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">#}
+{#    <!-- Material Design icon font -->#}
+{#    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">#}
+{#  </head>#}
+
 {% block content %}
 
 <style>
@@ -22,8 +30,12 @@
         }
 
         .box-container {
-            margin: 100px auto;
-            width: 80%;
+            margin: 20px auto;
+            {#width: 80%;#}
+            max-width: 60%;
+            {#min-width: 50%;#}
+            {#max-width: 800px;#}
+            min-width: 500px;
             display: flex;
             text-align: justify;
             font-family: 'Roboto', sans-serif;
@@ -70,8 +82,9 @@
         button {
             display: inline-flex;
             background: #68819a;
-            width: 10vw;
-            height: 70px;
+            {#width: 10vw;#}
+            width: 100px;
+            height: 60px;
             color: #ffffff;
             font-size: 50px;
             font-family: 'Roboto', sans-serif;
@@ -88,8 +101,9 @@
            background: #5c748c;
             transform: scale(1.1);
             border-radius: 8px;
-            width: 10vw;
-            height: 70px;
+            width: 100px;
+            {#width: 10vw;#}
+            height: 60px;
 
         }
 
@@ -133,7 +147,8 @@
             .btn {
                 display: flex;
                 background: #68819a;
-                width: 7vw;
+                width: 80px;
+                {#width: 7vw;#}
                 height: 50px;
                 color: #ffffff;
                 font-family: 'Roboto', sans-serif;
@@ -150,38 +165,14 @@
                background: #5c748c;
                 transform: scale(1.1);
                 border-radius: 8px;
-                width: 7vw;
+                width: 80px;
+                {#width: 7vw;#}
                 height: 50px;
                 vertical-align: center;
                 color: #ffffff;
                 font-size:2vw;
             }
 </style>
-    <div class="box-container">
-      <div class="box1-content">
-        <h1>Median TEC</h1>
-        <img class="img1" src="{% static 'map-anim1.gif' %}">
-        <br>
-        <p>To calculate the variations of TEC value on one day we used the data of the Madrigal system capable of
-            managing and serving archival and real-time data from a wide range of ground-based instruments
-            (http://www.openmadrigal.org/). The TEC data is a diurnal file containing the values of TEC for different
-            geographic points with a time step of 5 minutes. These data were averaged by a 15-minute window and
-            distributed along a 180x360 grid in one-degree increments. For each time moment, the median value of TEC
-            (TECmed) was calculated for the 27 previous days. The TEC deviation from the median value (∂TEC) was
-            calculated by the formula:<br><br>
-            ∂TEC (lat, long, t) = (TEC (lat, long, t) - TECmed (lat, long, t))/ TECmed (lat, long, t),<br><br>
-            where lat is latitude, long is longitude and t is UT. Thus the processing of TEC data reproduces the
-            well-known technique from ionosonde data processing. As far as NmF2 gives the significant part of TEC then
-            TEC variations can be studied and analyzed in the same manner as NmF2 temporal dynamics in ionosonde studies.</p>
-          <div class="box1-side">
-            <form method="post" id="tec">
-                <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
-                <input type="hidden" id="source" name="source" value="tec">
-            </form>
-          </div>
-      </div>
-    </div>
     <div class="box-container">
       <div class="box1-content content">
         <h1>VLF Signals</h1>
@@ -194,12 +185,17 @@
             <div class="box1-side">
                 <form method="post" id="vlf">
                     <br>
-                    <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                    <button type="submit" formaction="/date-selection" class="button" style="font-size:25px; justify-content: center">Data</button>
                     <input type="hidden" id="source" name="source" value="vlf">
                 </form>
             </div>
       </div>
     </div>
+{#    <div class="mdl-grid">#}
+{#      <div class="mdl-cell mdl-cell--4-col">4</div>#}
+{#      <div class="mdl-cell mdl-cell--4-col">4</div>#}
+{#      <div class="mdl-cell mdl-cell--4-col">4</div>#}
+{#    </div>#}
     <div class="box-container">
       <div class="box1-content content">
         <h1>GNSS</h1>
@@ -224,18 +220,23 @@
               display: table;
               {#border: 1px solid #a5c1d3;#}
               width: 100%;
+                border-spacing: 20px;
+                {#margin: 20px;#}
             }
             .col {
               display: table-cell;
+                {#border-spacing: 30px;#}
               border: 0.5px solid #a5c1d3;
                 border-radius: 5px;
               padding: 16px;
+                min-width: 160px;
             }
 
-            @media only screen and (max-width: 600px) {
+            @media only screen and (max-width: 1200px) {
               .col {
                 display: block;
                 width: 100%;
+                min-width: 160px;
               }
             }
           </style>
@@ -254,17 +255,20 @@
                     <br>
                   <ul>
                       <li>GPS L1/L2/L5</li>
-                      <li>GLONASS L1/L2</li>
-                      <li>SBAS L1/L5</li>
+{#                      <li>GLONASS L1/L2</li>#}
+{#                      <li>SBAS L1/L5</li>#}
                       <li>1 Hz update rate</li>
-                      <br>
                   </ul>
+{#                <br>#}
+{#                <br>#}
                 </p>
                 <form method="post" id="vlf">
                     <br>
-                    <button type="submit" formaction="/date-selection" class="btn" style="font-size:2vw;">⟶</button>
+                    <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center; float: right">Data</button>
                     <input type="hidden" id="source" name="source" value="vlf">
                 </form>
+                <br>
+                <br>
                 <br>
             </div>
                   <div class="col" style="background:#dce0e3">
@@ -280,14 +284,16 @@
                                     <li>GPS L1/L2/L5</li>
                                     <li>1 Hz update rate</li>
                                 </ul>
-                                <br>
-                                <br>
+{#                                <br>#}
+{#                                <br>#}
                             </p>
                             <form method="post" id="gps">
                                 <br>
-                                <button type="submit" formaction="/date-selection" class="btn" style="font-size:2vw;">⟶</button>
+                                <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center; float: right">Data</button>
                                 <input type="hidden" id="source" name="source" value="gps">
                             </form>
+                            <br>
+                            <br>
                             <br>
 
 
@@ -305,15 +311,17 @@
                                     <li>GPS L1/L2/L5</li>
                                     <li>1 Hz update rate</li>
                                 </ul>
-                                <br>
-                                <br>
+{#                                <br>#}
+{#                                <br>#}
                       </p>
                       <div class="box2-side">
                           <form method="post" id="vlf">
                               <br>
-                              <button type="submit" formaction="/date-selection" class="btn" style="font-size:2vw;">⟶</button>
+                              <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center; float: right">Data</button>
                               <input type="hidden" id="source" name="source" value="vlf">
                           </form>
+                          <br>
+                          <br>
                           <br>
                       </div>
                   </div>
@@ -411,7 +419,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="lem">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="lem">
             </form>
            </div>
@@ -427,7 +435,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="k_ind">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="k_ind">
             </form>
            </div>
@@ -443,7 +451,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="vlf">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="vlf">
             </form>
            </div>
@@ -459,7 +467,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="vlf">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="vlf">
             </form>
            </div>
@@ -475,7 +483,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="vlf">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="vlf">
             </form>
            </div>
@@ -491,10 +499,35 @@
 {#               TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="vlf">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:3vw;">⟶</button>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="vlf">
             </form>
            </div>
+      </div>
+    </div>
+    <div class="box-container">
+      <div class="box1-content">
+        <h1>Median TEC</h1>
+        <img class="img1" src="{% static 'map-anim1.gif' %}">
+        <br>
+        <p>To calculate the variations of TEC value on one day we used the data of the Madrigal system capable of
+            managing and serving archival and real-time data from a wide range of ground-based instruments
+            (http://www.openmadrigal.org/). The TEC data is a diurnal file containing the values of TEC for different
+            geographic points with a time step of 5 minutes. These data were averaged by a 15-minute window and
+            distributed along a 180x360 grid in one-degree increments. For each time moment, the median value of TEC
+            (TECmed) was calculated for the 27 previous days. The TEC deviation from the median value (∂TEC) was
+            calculated by the formula:<br><br>
+            ∂TEC (lat, long, t) = (TEC (lat, long, t) - TECmed (lat, long, t))/ TECmed (lat, long, t),<br><br>
+            where lat is latitude, long is longitude and t is UT. Thus the processing of TEC data reproduces the
+            well-known technique from ionosonde data processing. As far as NmF2 gives the significant part of TEC then
+            TEC variations can be studied and analyzed in the same manner as NmF2 temporal dynamics in ionosonde studies.</p>
+          <div class="box1-side">
+            <form method="post" id="tec">
+                <br>
+                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
+                <input type="hidden" id="source" name="source" value="tec">
+            </form>
+          </div>
       </div>
     </div>
 
